# launcher

./: .gitignore  README.md
.github/workflows/: build.yml  ci.yml  steam.yml
scripts/: download-webview2.ps1
src/: bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: byond.rs  config.rs  control_server.rs  lib.rs  server_ping.rs  servers.rs  settings.rs  webview2.rs  wine.rs
src/components/: ServerItem.tsx  TermsOfServiceModal.tsx  WhitelistRequired.tsx
src/hooks/: useServerFilters.ts
src/i18n/locales/: en.json
src/stores/: serverStore.ts  settingsStore.ts
src/styles/: base.scss
