[package]
name = "SS13_Launcher"
version = "0.20.0"
description = "Space Station 13 server browser and launcher"
authors = ["hry-gh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dev = []
discord_invites = []
steam = ["steamworks"]
cm_ss13 = []  # CM-SS13 specific variant

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ss13_launcher_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "2"
tokio = { version = "1", features = ["full", "sync"] }
oauth2 = "5"
tiny_http = "0.12"
rand = "0.8"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
base64 = "0.22"
dirs = "5"
open = "5"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2"
steamworks = { version = "0.12", optional = true }
hex = "0.4"
sha2 = "0.10"
discord-sdk = "0.4.0"
sysinfo = "0.38"
parking_lot = "0.12"
async-trait = "0.1"
which = "7"
percent-encoding = "2.3.2"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
zstd = "0.13"
tar = "0.4"
http2byond = "0.2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hickory-resolver = "0.26"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
ping = "0.7.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging"] }
win32job = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# Enable pedantic, then allow noisy ones
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"

# Correctness & bugs
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
arithmetic_side_effects = "warn"
indexing_slicing = "warn"
string_slice = "warn"
needless_pass_by_value = "allow"

# Performance
inefficient_to_string = "warn"
needless_collect = "warn"
redundant_clone = "warn"

# Clone-related
clone_on_ref_ptr = "warn"
implicit_clone = "warn"
rc_clone_in_vec_init = "warn"

# Security & robustness
lossy_float_literal = "warn"
verbose_file_reads = "warn"

# Async
future_not_send = "warn"
